@@ -50,6 +50,7 @@
 28. Add support for Jamendo and Magnatune streams.
 29. Add 'Add Stream' button to play queue - so that streams can be quickly
     added without needing to store in streams page.
+30. For streams, use filename part of path as track title.
 
 0.9.2
 -----
